# RisingPhoenixEngine

PhoenixEngine/: CMakeLists.txt  README.md
RisingPhoenixEngine/: CMakeLists.txt  CMakeSettings.json
RisingPhoenixEngine/src/: main.cpp
